Fixed scrolling problem on Safari

--- a/style/index.css
+++ b/style/index.css
@@ -144,12 +144,13 @@ html {
     /* background-size: cover; */
     /* background-image: url("../images/own/sky.png")  ; */
 	background-color: rgb(213, 215, 218);
-	overflow-y:hidden
+	overflow: hidden
 }
 
 body{
 	font-family: 'Poppins',sans-serif;
 	font-size: 20px;
+	/* overflow-y: hidden; */
 }
 
 /*style for buttons in pages*/
